# instapipe

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: basic_analysis.py  sample_data.csv
examples/output/: report.csv
src/instapipe/: __init__.py  __main__.py  classify.py  clean.py  cli.py  compare.py  dashboard.py  excel.py  ingest.py  insights.py  metrics.py  output.py
tests/: test_classify.py  test_clean.py  test_cli.py  test_compare.py  test_excel.py  test_ingest.py  test_insights.py  test_metrics.py  test_output.py
