[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "instapipe"
version = "0.1.0"
description = "Data pipeline for Instagram analytics. Your Meta Business Suite exports in, real metrics out."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "aroaxinping" },
]
keywords = ["instagram", "analytics", "data-pipeline", "content-creator", "reels"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "pandas>=2.0",
    "openpyxl>=3.1",
    "matplotlib>=3.7",
    "seaborn>=0.13",
]

[project.optional-dependencies]
dashboard = ["plotly>=5.0"]
dev = ["pytest", "ruff", "pre-commit"]

[project.scripts]
instapipe = "instapipe.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
